# pascal-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MILESTONE3_COMPLETE.md  README.md  SESSION_PROGRESS_2025-01-30.md  SESSION_SUMMARY_2025-01-30_PART2.md  SPEC.md  STATUS.md  STDLIB_IMPLEMENTATION.md  TEST_COVERAGE_REPORT.md  TODO.md  TODO_PROGRESS.md  build.rs  minipas.code-workspace  pascalfmt.toml  test.pas  test_format.pas  test_format2.pas
crates/minipas-ast/: Cargo.toml
crates/minipas-ast/src/: comprehensive_tests.rs  enhanced_ast.rs  lib.rs
crates/minipas-cli/: Cargo.toml
crates/minipas-cli/src/: main.rs
crates/minipas-codegen/: Cargo.toml
crates/minipas-codegen/src/: advanced_optimizer.rs  advanced_types.rs  comprehensive_tests.rs  enhanced_codegen.rs  lib.rs  mocks.rs  optimizer.rs  register_allocator.rs  simd.rs  symbol_table.rs  traits.rs  type_checker.rs  unit_codegen.rs
crates/minipas-driver/: Cargo.toml
crates/minipas-driver/src/: compiler.rs  error.rs  lib.rs
crates/minipas-lexer/: Cargo.toml
crates/minipas-lexer/src/: comprehensive_tests.rs  enhanced_lexer.rs  enhanced_lexer_tests.rs  enhanced_tokens.rs  lexer.rs  lib.rs  mocks.rs  tokens.rs  trait_tests.rs  traits.rs
crates/minipas-module/: Cargo.toml
crates/minipas-module/src/: error.rs  lib.rs  loader.rs  ppu.rs  resolver.rs
crates/minipas-parser/: Cargo.toml
crates/minipas-parser/src/: comprehensive_tests.rs  enhanced_parser.rs  lib.rs  mocks.rs  traits.rs
docs/: ACKNOWLEDGMENTS.md  API.md  COMPLEX_VALIDATION_SUMMARY.md  DEPENDENCIES.md  DEVELOPMENT.md  FINAL_TEST_STATUS.md  INTERFACES.md  MCP_INTEGRATION.md  MIGRATION_SUMMARY.md  MODULARIZATION.md  MODULARIZATION_COMPLETE.md  MODULARIZATION_SUMMARY.md  MODULE_SYSTEM.md  TESTING.md  TEST_FIX_SUMMARY.md  TEST_STATUS.md  TEST_VERIFICATION.md  THREADING.md  TRAIT_ARCHITECTURE.md  USER_GUIDE.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/migration/: FPC_CAPABILITIES_ANALYSIS.md  MODULE_SYSTEM_MIGRATION.md
docs/minipas/: all.html  index.html  sidebar-items.js
docs/minipas/ast/: enum.BinaryOp.html  enum.Expr.html  enum.ForDirection.html  enum.Literal.html  enum.Stmt.html  enum.Type.html  enum.UnaryOp.html  index.html  sidebar-items.js  struct.Block.html  struct.CaseArm.html  struct.ConstDecl.html  struct.FunctionDecl.html  struct.Parameter.html  struct.ProcedureDecl.html  struct.Program.html  struct.TypeDecl.html  struct.VariableDecl.html
docs/minipas/codegen/: index.html  struct.CodeGenerator.html
docs/minipas/lexer/: enum.LexerError.html  enum.Token.html  index.html  sidebar-items.js  struct.Lexer.html
examples/: 01_basics.pas  02_functions.pas  03_strings.pas  04_arrays.pas  05_classes.pas  06_exceptions.pas  07_nested_functions.pas  08_math_algorithms.pas  09_class_hierarchy.pas  10_comprehensive.pas  advanced_features.pas  boolean_logic.pas  boolean_logic.s  calculator.pas  calculator.s  cli_parallel.sh  comprehensive_features.pas  conditional.pas  conditional.s  constants.pas  example_unit.pas  expressions.pas  fibonacci.pas  fibonacci.s  formatter_demo.pas  hello.pas  hello.s  library_parallel.rs  loops.pas  loops.s  mcp_parallel.rs  simple_loop.pas  simple_loop.s  simple_math.pas  simple_math.s
examples/student_management/: README.md  build.sh  course.pas  grades.pas  main.pas  registry.pas  student.pas
examples/test_programs/: if_writeln.pas  simple.pas  writeln.pas
runtime/: Makefile  libminipas_runtime.dylib  minipas_runtime.c  minipas_runtime.h  test_runtime.c
src/: advanced_optimizer.rs  advanced_types.rs  ast.rs  basic_lexer.rs  basic_parser.rs  build_system.rs  codegen.rs  compilation_events.rs  compiler.rs  conditional_compile.rs  constant_eval.rs  debugger.rs  docgen.rs  enhanced_ast.rs  enhanced_codegen.rs  enhanced_tokens.rs  error.rs  error_suggestions.rs  interpreter.rs  interpreter_function.rs  interpreter_scope.rs  interpreter_traits.rs  interpreter_value.rs  lexer.rs  lib.rs  loader.rs  main.rs  mcp_server.rs  optimizer.rs  parallel.rs  plugin.rs  ppu.rs  profile.rs  register_allocator.rs  resolver.rs  simd.rs  source_map.rs  symbol_table.rs  tokens.rs  type_checker.rs  (+1 more)
src/ast/: mod.rs
src/codegen/: mod.rs
src/formatter/: config.rs  core.rs  mod.rs
src/interpreter/: mod.rs  value.rs
src/lexer/: mod.rs  mod.rs.bak  test.rs  tokens.rs
src/parser/: decl.rs  expression.rs  mod.rs  statement.rs
src/traits/: codegen.rs  diagnostic.rs  lexer.rs  mod.rs  optimizer.rs  parser.rs
src/utils/: ast_helpers.rs  block.rs  cow_ident.rs  mod.rs  string_utils.rs
stdlib/: Classes.pas  Math.pas  README.md  Strings.pas  SysUtils.pas  System.pas
stdlib/core/: Core.pas
syntaxes/: pascal.tmGrammar.json
test_programs/: fib_oneline.pas  fib_reduced.pas  fibonacci.pas  for_block_writeln.pas  for_loop.pas  for_writeln.pas  multi_if.pas  writeln_multi.pas
tests/: advanced_type_tests.rs  ast_tests.rs  basic_test.rs  codegen_tests.rs  error_handling_comprehensive_tests.rs  error_tests.rs  exception_tests.rs  generic_tests.rs  inline_assembly_tests.rs  integration_comprehensive_tests.rs  integration_test.rs  integration_tests.rs  lexer_basic.rs  lexer_test.rs  lexer_tests.rs  memory_management_tests.rs  mod.rs  oop_tests.rs  operator_overloading_tests.rs  parser_tests.rs  run_compiler_tests.rs  run_complex_validation_tests.rs  run_example_tests.rs  run_integration_tests.rs  run_interpreter_tests.rs  run_simple_compiler_tests.rs  run_simple_interpreter_tests.rs  run_type_checker_tests.rs  string_tests.rs  test.pas  test_runner.rs  type_tests.rs  unit_system_tests.rs
tests/integration/: cli_tests.rs  complex_validation_tests.rs  comprehensive_tests.rs  integration_tests.rs  mod.rs
tests/unit/: codegen_tests.rs  edge_case_tests.rs  error_handling_tests.rs  formatter_tests.rs  interpreter_tests.rs  lexer_tests.rs  mod.rs  module_tests.rs  oop_tests.rs  optimization_tests.rs  parser_tests.rs  performance_tests.rs  simd_tests.rs  stdlib_tests.rs  threading_tests.rs  type_checker_tests.rs
(+29 files in other folders)
