[package]
name = "pascal"
version = "0.1.1"
edition = "2024"
authors = ["Ying Kit WONG"]
license = "Apache-2.0"
repository = "https://github.com/yingkitw/pascal-rs"
keywords = ["compiler", "pascal", "education", "mcp"]
categories = ["command-line-utilities", "compilers"]
description = "A Pascal compiler in rust implementation with MCP support"
documentation = "https://docs.rs/pascal"
homepage = "https://github.com/yingkitw/pascal-rs"

[[bin]]
name = "pascal"
path = "src/main.rs"

[[example]]
name = "mcp_parallel"
required-features = ["mcp"]

[dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
logos = "0.15"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.10"
rmcp = "0.14"

# CLI output
colored = "2.1"
num_cpus = "1.16"

# LSP support (optional)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1.0", optional = true }

# macOS GUI support (optional)
cocoa = { version = "0.25", optional = true }
objc = { version = "0.2.7", optional = true }

# Debug support (optional)  
gimli = { version = "0.31", optional = true }

# Profiling (optional)
pprof = { version = "0.13", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
assert_matches = "1.5"
insta = "1.41"

[features]
default = []
mcp = []  # MCP server for AI integration (optional)
lsp = ["tower-lsp", "tokio", "serde_json"]
gui = ["cocoa", "objc"]
debug = ["gimli"]
profile = ["pprof"]

[workspace]
resolver = "3"