[package]
name = "minipas-ast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Abstract Syntax Tree definitions for the MiniPAS Pascal compiler"

[dependencies]
