[package]
name = "minipas-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for the MiniPAS Pascal compiler"

[[bin]]
name = "minipas"
path = "src/main.rs"

[dependencies]
minipas-driver = { path = "../minipas-driver" }
minipas-ast = { path = "../minipas-ast" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
