[package]
name = "minipas-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code generation for the MiniPAS Pascal compiler"

[dependencies]
minipas-ast = { path = "../minipas-ast" }
anyhow = { workspace = true }
