[package]
name = "minipas-lexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lexical analysis for the MiniPAS Pascal compiler"

[dependencies]
logos = { workspace = true }
thiserror = { workspace = true }
