[package]
name = "minipas-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Parser for the MiniPAS Pascal compiler"

[dependencies]
minipas-lexer = { path = "../minipas-lexer" }
minipas-ast = { path = "../minipas-ast" }
anyhow = { workspace = true }
